# resdac-knowledge-base

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LESSONS.md  README.md  ROADMAP.md  SPEC.md  STATUS.md  pyproject.toml  ruff.toml
.agents/skills/cms-kb-archive/: SKILL.md
.agents/skills/cms-kb-extraction/: SKILL.md
.agents/skills/cms-kb-orchestrator/: SKILL.md
.agents/skills/cms-kb-parse/: SKILL.md
.agents/skills/cms-kb-qa/: SKILL.md
_workspace/: 01_request.md  02_source_inventory.md  03_archive_manifest.md  04_extraction_pack.md  05_parsing_pack.md  06_qa_review.md  07_variable_pack.md
data/graph/: document_edges.csv  ontology_edges.csv  ontology_nodes.csv  variable_edges.csv
data/metadata/: datasets.csv  documents.csv  variables.csv
data/parsed/chunks/: ahc-model__chunk_0.json  ahc-model__chunk_1.json  ahc-model__chunk_2.json  ahc-model__chunk_3.json  ahc-model__chunk_4.json  ahc-model__chunk_5.json  ahc-model__chunk_6.json  ahc-model__chunk_7.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p100__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p100__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p101__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p101__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p102__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p102__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p103__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p103__chunk_1.json  (+22074 more)
docs/: data-model.md  developer-guide.md  pipeline.md  source-coverage.md  user-manual.md
manifests/: archive_manifest.csv  site_inventory.csv
scripts/: validate_harness.py
src/cms_kb/: __init__.py  __main__.py  agent_api.py  archive.py  extraction.py  inventory.py  mcp.py  parsing.py  qa.py  retrieval.py  variables.py
tests/: test_agent_api.py  test_archive.py  test_extraction.py  test_inventory.py  test_mcp.py  test_parsing.py  test_qa.py  test_retrieval.py  test_variables.py
(+223 files in other folders)
