[project]
name = "resdac-doc-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2"]

[dependency-groups]
dev = ["basedpyright>=1.20"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
