[project]
name = "resdac-doc-archive"
version = "0.1.0"
description = "CMS documentation archive and inventory tooling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mcp>=1.27.2",
  "pydantic>=2",
  "pymupdf>=1.27.2.3",
  "trafilatura>=2.1.0",
]

[project.scripts]
cms-kb = "cms_kb.__main__:main"
cms-kb-archive = "cms_kb.archive:main"
cms-kb-extract = "cms_kb.extraction:main"
cms-kb-parse = "cms_kb.parsing:main"
cms-kb-qa = "cms_kb.qa:main"
cms-kb-variables = "cms_kb.variables:main"
cms-kb-search = "cms_kb.retrieval:main"
cms-kb-agent-context = "cms_kb.agent_api:main"
cms-kb-mcp = "cms_kb.mcp:main"

[dependency-groups]
dev = ["basedpyright>=1.20", "pytest>=8", "ruff>=0.11"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_kb"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
